tests/fixtures/positive/supply-chain/version-catalog-raw-version-in-build/settings.gradle.kts
rootProject.name = "version-catalog-raw-version-in-build-positive"

include(":app")
