tests/fixtures/negative/supply-chain/version-catalog-raw-version-in-build/settings.gradle.kts
rootProject.name = "version-catalog-raw-version-in-build-negative"

include(":app")
